--- a/app/public/home.html
+++ b/app/public/home.html
@@ -25,11 +25,11 @@
             </div>
         </div>
 
-        <!-- <footer class="footer">
+        <footer class="footer">
             <div class="container">
                 <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
             </div>
-        </footer> -->
+        </footer>
 
     </div>
 
